fix recipe card alignment

--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -5,6 +5,7 @@
     justify-content: center;
     align-items: center;
     margin-bottom: 30px;
+    margin-top: 5px;
   }
   
   .search-input {
