--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -11,6 +11,7 @@
   
   .content-main {
     text-align: center;
+    align-items: center;
     margin-bottom: 40px;
   }
   
